examples/errors/music/unclosed_annotation.abc
X:1
T:Unclosed Annotation
K:C
% L001: Missing closing double quote
"CM7 C E G B |
